# gimp

./: .gitlab-ci.yml  meson.build
app/config/: gimpguiconfig.c
app/core/: gimp-utils.c  gimpcontext.c  gimpdrawable-transform.c  gimpdrawable.c  gimpdrawable.h  gimpimage-merge.c  gimpimage.c  gimppickable.c  gimppickable.h
app/dialogs/: preferences-dialog.c
app/pdb/: internal-procs.c
app/tests/: test-xcf.c
app/tools/: gimpfiltertool.c  gimpoperationtool.c  gimptexttool.c
app/widgets/: gimpaction.c  gimpcolordialog.c  gimpitemtreeview.c
app/xcf/: xcf-load.c  xcf-save.c
libgimp/: gimp.c  gimpproceduredialog.c
libgimpconfig/: gimpconfig-serialize.c
libgimpwidgets/: gimpwidgetsutils.c
plug-ins/common/: blinds.c  checkerboard.c  file-png.c  sparkle.c
plug-ins/file-psd/: psd-load.c  psd-save.c
plug-ins/python/tests/test-file-plug-ins/: README.md  gimptestframework.py
plug-ins/python/tests/test-file-plug-ins/tests/: batch-config.ini  dds-tests.ini  gif-tests.ini  jpeg-tests.ini  meson.build  png-tests.ini  pnm-tests.ini  psb-tests.ini  psd-tests.ini  sgi-tests.ini  tif-tests.ini
