# Add test configuration data...

install_data([
    # main config files
    'config.ini',
    'batch-config.ini',
    # file format specific config files for import testing
    'bmp-tests.ini',    # todo zip download of bmp test suite
    'dds-tests.ini',    # todo add images from GIMP dds issues to a repo
    'gif-tests.ini',
    'jpeg-tests.ini',
    'png-tests.ini',    # todo zip download of png test suite and brokensuite
    'pnm-tests.ini',    # todo telparia pam images download or add to a repo
    'psb-tests.ini',
    'psd-tests.ini',    # todo svn download or add to repo of psdparse samples
    'sgi-tests.ini',
    'tga-tests.ini',
    'tif-tests.ini',   # todo metacpan images download or add to repo
    # file format specific config files for export testing
    'bmp-export-tests.ini',
    # file format specific files containing the files to test importing and
    # their expected result
    'bmpsuite-b-tests.files',
    'bmpsuite-g-tests.files',
    'bmpsuite-q-tests.files',
    'dds-tests.files',
    'gif-imagetestsuite-tests.files',
    'jpeg-imagetestsuite-tests.files',
    'png-imagetestsuite-tests.files',
    'pnm-tests-1.files',
    'pnm-tests-2.files',
    'psb-tests.files',
    'psd-tests.files',
    'psd-colormodes-tests.files',
    'sgi-tests.files',
    'sgi-tests-2.files',
    'sgi-tests-3.files',
    'tga-tests.files',
    'tif-imagetestsuite-tests.files',
    'tif-imagetestsuite-tests-2.files',
    'tif-imagetestsuite-tests-3.files',
  ],
  install_dir: gimpplugindir / 'plug-ins' / 'test-file-plug-ins' / 'tests',
)
